--- a/angular-tailwind/package.json
+++ b/angular-tailwind/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "husky": "^8.0.3",
     "rxjs": "~6.6.0",
     "tailwindcss": "^2.2.19",
     "tslib": "^2.3.0",
