--- a/angular-tailwind/package.json
+++ b/angular-tailwind/package.json
@@ -6,6 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "tailwind": "tailwindcss -i projects/angular-tailwind/src/styles.css -o projects/angular-tailwind/src/assets/css/main.css",
+    "tailwind:watch": "tailwindcss -i projects/angular-tailwind/src/styles.css -o projects/angular-tailwind/src/assets/css/main.css --watch",
     "test": "ng test",
     "lint": "ng lint",
     "lint:fix": "node scripts/lint.js --env=npm --fix"
